# agri-sevak-v2

./: .dockerignore  .gitignore  azure_services.md  build_plan.md  docker-compose.yml  pyproject.toml  tools.md
.github/workflows/: deploy.yml
agent_worker/: Dockerfile  consumer.py  handler.py  metrics.py  requirements.txt  worker.py
evaluation/: compare.py  eval_analysis.md  eval_analysis_deep.md  expected_results.md  golden_dataset.jsonl  run_eval.py  scorecard.py  scorers.py
k8s/: configmap.yaml  ingress-simple.yaml  ingress-tls.yaml  ingress.yaml  letsencrypt-issuer.yaml  namespace.yaml  redpanda.yaml  secrets.yaml
k8s/image-workers/: deployment.yaml  scaledobject.yaml
k8s/monitoring/: grafana-dashboard.json  grafana-datasource.yaml  prometheus-scrape-config.yaml
k8s/text-workers/: deployment.yaml  scaledobject.yaml
k8s/voice-workers/: deployment.yaml  scaledobject.yaml
scripts/: add_spelling_variations.py  create_topics.sh  upload_eval_images.py
tests/: debug_pinecone.py  test_agent.py  test_agent_integration.py  test_blob_storage.py  test_crop_detector.py  test_dedup.py  test_gemini_pool.py  test_general_crop_advisor.py  test_graph_api.py  test_image_analyzer.py  test_message_parser.py  test_producer.py  test_rag_and_auditor.py  test_rag_retriever.py  test_redis_session.py  test_safety_audit.py  test_safety_checker.py  test_security.py  test_state_machine.py  test_variety_advisor.py  test_weather_fetcher.py  test_webhook_receiver.py
webhook_receiver/: Dockerfile  app.py  metrics.py  producer.py  requirements.txt  security.py
(+33 files in other folders)
