  [build-system]
  requires = ["setuptools>=68.0"]                                                                                                                                                                                                                                            
  build-backend = "setuptools.build_meta"
                                                                                                                                                                                                                                                                             
  [project]                                                                        
  name = "kisaan"
  version = "0.1.0"
  requires-python = ">=3.12"

  [tool.setuptools.packages.find]
  include = ["webhook_receiver*", "agent_worker*", "shared*", "training*", "evaluation*"]